# isomesh

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: configureDoxygenFile.cmake  isomesh-build-config.cmake.in  isomesh-config.cmake.in
include/isomesh/: common.hpp  isomesh.hpp
include/isomesh/algo/: marching_cubes.hpp  uniform_dual_contouring.hpp
include/isomesh/data/: dc_octree.hpp  dc_octree_node.hpp  dmc_octree.hpp  dmc_octree_node.hpp  grid.hpp  grid_edge_storage.hpp  mdc_octree.hpp  mdc_octree_node.hpp  mesh.hpp  octree.hpp  octree_node.hpp
include/isomesh/export/: mesh2ply.hpp
include/isomesh/field/: heightmap.hpp  mesh_field.hpp  scalar_field.hpp
include/isomesh/fun/: heightmap.hpp
include/isomesh/qef/: qef_solver_3d.hpp  qef_solver_4d.hpp
include/isomesh/util/: material_filter.hpp  material_selector.hpp  ply_mesh.hpp  tables.hpp  zero_finder.hpp
isomesh/data/: grid.hpp  material.hpp  mesh.hpp
projects/VC14/: .gitignore  isomesh.sln  isomesh.vcxproj  isomesh.vcxproj.filters  viewer.vcxproj  viewer.vcxproj.filters
projects/VC14/lib/: .gitignore
projects/VC14/lib/x64/Debug/: glfw3.lib
projects/VC14/lib/x64/Release/: glfw3.lib
projects/VC14/lib/x86/Debug/: glfw3.lib
projects/VC14/lib/x86/Release/: glfw3.lib
src/: CMakeLists.txt
src/algo/: edge_sets_table.h  marching_cubes.cpp  marching_cubes_tables.h  uniform_dual_contouring.cpp
src/data/: dc_octree.cpp  dc_octree_node.cpp  dmc_octree.cpp  dmc_octree_node.cpp  grid.cpp  grid_edge_storage.cpp  mdc_octree.cpp  mdc_octree_node.cpp  mesh.cpp  octree.cpp  octree_node.cpp
src/export/: mesh2ply.cpp
src/field/: heightmap.cpp  mesh_field.cpp
src/fun/: heightmap.cpp
src/isomesh/: isomesh.hpp  pch.cpp  pch.hpp
src/isomesh/data/: mesh.hpp
src/isomesh/qef/: qef_solver.hpp
src/isomesh/sdf/: boolean_operations.cpp  boolean_operations.hpp  domain_transforms.cpp  domain_transforms.hpp  sdf.cpp  sdf.hpp  simple_functions.cpp  simple_functions.hpp
src/private/: disjoint_set_union.cpp  disjoint_set_union.hpp  octree.cpp  octree.hpp  ply_data.cpp  ply_data.hpp  stbi_data.cpp  stbi_data.hpp  triangle.hpp
src/qef/: gradient_descent_qef_solver_3d.cpp  gradient_descent_qef_solver_4d.cpp  householder.hpp  jacobi.hpp  qef_solver_3d.cpp  qef_solver_4d.cpp  qr_qef_solver_3d.cpp  qr_qef_solver_4d.cpp
src/util/: bisection_zero_finder.cpp  material_filter.cpp  ply_mesh.cpp  regula_falsi_zero_finder.cpp  tables.cpp
src/viewer/: main.cpp
test/: CMakeLists.txt  glm.cpp  grid.cpp  marching_cubes.cpp  qef_solver_3d.cpp  qef_solver_4d.cpp  testglm.cpp  zero_finder.cpp
