function (isomesh_add_test NAME)
	set (TARGET_NAME test-${NAME})
	add_executable (${TARGET_NAME} ${NAME}.cpp)
	target_link_libraries (${TARGET_NAME} isomesh)
	add_test (NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
endfunction ()

isomesh_add_test (glm)
isomesh_add_test (zero_finder)
isomesh_add_test (grid)
isomesh_add_test (marching_cubes)
